--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VideoAI Pro - Enterprise AI Video Solutions</title>
+    <title>VidSimplify - Enterprise AI Video Solutions</title>
     <meta name="description" content="Transform your video content with enterprise-grade AI solutions. Long-form to short clips, AI avatars, dubbing, and more." />
   </head>
   <body>
