--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VidSimplify - Enterprise AI Video Solutions</title>
     <meta name="description" content="Transform your video content with enterprise-grade AI solutions. Long-form to short clips, AI avatars, dubbing, and more." />
+    <script src="https://player.vimeo.com/api/player.js"></script>
   </head>
   <body>
     <div id="root"></div>
